Keep the late-weight test on Java 8, since that is what CI compiles with
List.of is Java 9. The pom sets source/target 1.8 without release, so javac
on a modern JDK compiles it happily and only the CI matrix - setup-java 1.8
on three operating systems - would have found it, as a failure to compile.
It was the one live occurrence in the repository; the rest of the code keeps
to Java 8 without needing to be told.